initialise hubbub for start-catalogue.sh.  EMC-429